
syntax = "proto3";
package cosmos.evm.feemarket.v1;

import "amino/amino.proto";
import "gogoproto/gogo.proto";

option go_package = "github.com/gurufinglobal/guru/v2/x/feemarket/types";

// Params defines the EVM module parameters
message Params {
  option (amino.name) = "cosmos/evm/x/feemarket/Params";

  // no_base_fee forces the EIP-1559 base fee to 0 (needed for 0 price calls)
  bool no_base_fee = 1;
  // base_fee_change_denominator bounds the amount the base fee can change
  // between blocks.
  uint32 base_fee_change_denominator = 2;
  // elasticity_multiplier bounds the maximum gas limit an EIP-1559 block may
  // have.
  uint32 elasticity_multiplier = 3;
  // DEPRECATED: initial base fee for EIP-1559 blocks.
  reserved 4;
  reserved "initial_base_fee";
  // enable_height defines at which block height the base fee calculation is
  // enabled.
  int64 enable_height = 5;
  // base_fee for EIP-1559 blocks.
  string base_fee = 6 [
    (gogoproto.customtype) = "cosmossdk.io/math.LegacyDec",
    (gogoproto.nullable) = false,
    (amino.dont_omitempty) = true
  ];
  // min_gas_price defines the minimum gas price value for cosmos and eth
  // transactions
  string min_gas_price = 7 [
    (gogoproto.customtype) = "cosmossdk.io/math.LegacyDec",
    (gogoproto.nullable) = false,
    (amino.dont_omitempty) = true
  ];
  // min_gas_multiplier bounds the minimum gas used to be charged
  // to senders based on gas limit
  string min_gas_multiplier = 8 [
    (gogoproto.customtype) = "cosmossdk.io/math.LegacyDec",
    (gogoproto.nullable) = false,
    (amino.dont_omitempty) = true
  ];
  // gas_price_adjustment_factor defines the factor by which the gas price is adjusted
  string gas_price_adjustment_factor = 9 [
    (gogoproto.customtype) = "cosmossdk.io/math.LegacyDec",
    (gogoproto.nullable) = false,
    (amino.dont_omitempty) = true
  ];
  // max_change_rate defines the maximum rate at which the min gas price can change
  // between blocks as a percentage (e.g., 0.125 for 12.5%)
  string max_change_rate = 10 [
    (gogoproto.customtype) = "cosmossdk.io/math.LegacyDec",
    (gogoproto.nullable) = false,
    (amino.dont_omitempty) = true
  ];

}
