syntax = "proto3";
package guru.oracle.v1;

import "gogoproto/gogo.proto";
import "google/protobuf/timestamp.proto";
import "cosmos/base/v1beta1/coin.proto";

option go_package = "github.com/GPTx-global/guru-v2/v2/x/oracle/types";

// OracleType defines the type of oracle data that can be requested and provided
// This enum helps categorize different kinds of oracle data sources and their purposes
enum OracleType {
  // Default value, should not be used
  ORACLE_TYPE_UNSPECIFIED = 0;
  // Minimum gas price oracle for network fee estimation
  ORACLE_TYPE_MIN_GAS_PRICE = 1;
  // Currency exchange rates and forex data
  ORACLE_TYPE_CURRENCY = 2;
  // Stock market data and indices
  ORACLE_TYPE_STOCK = 3;
  // Cryptocurrency prices and market data
  ORACLE_TYPE_CRYPTO = 4;
}

// RequestStatus defines the current state of an oracle request
// This helps track the lifecycle of oracle data requests
enum RequestStatus {
  // Default value, should not be used
  REQUEST_STATUS_UNSPECIFIED = 0;
  // Request is enabled
  REQUEST_STATUS_ENABLED = 1;
  // Request is paused
  REQUEST_STATUS_PAUSED = 2;
  // Request is disabled
  REQUEST_STATUS_DISABLED = 3;
}

// AggregationRule defines the enumeration for aggregating oracle data
// Specifies how multiple data points should be combined into a single value
enum AggregationRule {
    // Default value, should not be used
    AGGREGATION_RULE_UNSPECIFIED = 0;
    // Use average value to aggregate the data
    AGGREGATION_RULE_AVG = 1;
    // Use minimum value to aggregate the data
    AGGREGATION_RULE_MIN = 2;
    // Use maximum value to aggregate the data
    AGGREGATION_RULE_MAX = 3;
    // Use median value to aggregate the data
    AGGREGATION_RULE_MEDIAN = 4;
}

// OracleRequestDoc defines the structure for oracle request documents
// This is the main document that describes what oracle data is needed and how it should be processed
message OracleRequestDoc {
  // Unique identifier for the oracle request
  uint64 request_id = 1;
  // Type of oracle data being requested
  OracleType oracle_type = 2;
  // Human-readable name for the oracle request
  string name = 3;
  // Detailed description of what data is needed and its purpose
  string description = 4;
  // Time period in seconds between data updates
  uint32 period = 5;
  // List of account addresses that are authorized to provide data
  repeated string account_list = 6;
  // Minimum number of oracle nodes required to validate the data
  uint32 quorum = 7;
  // Source endpoints where the data can be fetched
  repeated OracleEndpoint endpoints = 8;
  // Rule for aggregating multiple data points (e.g., median, mean)
  AggregationRule aggregation_rule = 9;
  // Current status of the request
  RequestStatus status = 10;
  // Sequential number to ensure data freshness
  uint64 nonce = 12;
}

message OracleEndpoint {
  // URL of the oracle endpoint
  string url = 1;
  // Type of the oracle endpoint
  string parse_rule = 2;
}

// SubmitDataSet defines the structure for oracle data sets for submit
// This represents a single data point provided by an oracle node
message SubmitDataSet {
  // ID of the request this data set belongs to
  uint64 request_id = 1;
  // Sequential number to prevent replay attacks
  uint64 nonce = 2;
  // Raw data in string format (can be JSON, CSV, etc.)
  string raw_data = 3;
  // Address of the data provider
  string provider = 4;
  // Cryptographic signature of the data for verification
  bytes signature = 5;
}

// DataSet defines the structure for oracle data sets
message DataSet {
  // request_id represents the ID of the request this data set belongs to
  uint64 request_id = 1;
  // nonce represents the sequential number to prevent replay attacks
  uint64 nonce = 2;
  // block_height represents the height of the block where the data was aggregated
  uint64 block_height = 3;
  // block_time represents the time of the block where the data was aggregated
  uint64 block_time = 4;
  // raw_data represents the raw data in string format (can be JSON, CSV, etc.)
  string raw_data = 5;
}
