syntax = "proto3";

package guru.transwap.v1;

option go_package = "github.com/GPTx-global/guru-v2/x/transwap/types";

// DenomTrace contains the base denomination for ICS20 fungible tokens and the
// source tracing information path.
message DenomTrace {
  option deprecated = true;
  // path defines the chain of port/channel identifiers used for tracing the
  // source of the fungible token.
  string path = 1;
  // base denomination of the relayed fungible token.
  string base_denom = 2;
}
